iptables_rules.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Sep 24 12:29:44 2024
*filter
:INPUT ACCEPT [18:1845]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [22:2051]
-A INPUT -p tcp -m tcp --dport 6669 -j DROP
-A INPUT -p tcp -m tcp --dport 6660 -j DROP
-A INPUT -p udp -m udp --dport 162 -j DROP
-A INPUT -p udp -m udp --dport 161 -j DROP
-A INPUT -p udp -m udp --dport 139 -j DROP
-A INPUT -p udp -m udp --dport 138 -j DROP
-A INPUT -p udp -m udp --dport 137 -j DROP
-A INPUT -p udp -m udp --dport 135 -j DROP
-A INPUT -p tcp -m tcp --dport 135 -j DROP
-A INPUT -p udp -m udp --dport 514 -j DROP
-A INPUT -p udp -m udp --dport 69 -j DROP
-A INPUT -p tcp -m tcp --dport 445 -j DROP
-A INPUT -s 104.234.220.43/32 -j DROP
-A INPUT -s 185.75.90.31/32 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -m limit --limit 10/min --limit-burst 100 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 6669 -j DROP
-A OUTPUT -p tcp -m tcp --dport 6660 -j DROP
-A OUTPUT -p udp -m udp --dport 162 -j DROP
-A OUTPUT -p udp -m udp --dport 161 -j DROP
-A OUTPUT -p udp -m udp --dport 139 -j DROP
-A OUTPUT -p udp -m udp --dport 138 -j DROP
-A OUTPUT -p udp -m udp --dport 137 -j DROP
-A OUTPUT -p udp -m udp --dport 135 -j DROP
-A OUTPUT -p tcp -m tcp --dport 135 -j DROP
-A OUTPUT -p udp -m udp --dport 514 -j DROP
-A OUTPUT -p udp -m udp --dport 69 -j DROP
-A OUTPUT -p tcp -m tcp --dport 445 -j DROP
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
COMMIT
# Completed on Tue Sep 24 12:29:44 2024
